Fix scrollbar and HTML visibility in Project Properties Dialog

--- a/appinventor/appengine/war/static/css/Ya.css
+++ b/appinventor/appengine/war/static/css/Ya.css
@@ -1663,6 +1663,7 @@ path.ode-SimpleMockMapFeature-selected {
   border-right: 2px solid black;
   padding-right: 20px;
   outline: none;
+  overflow: auto;
 }
 
 .ode-propertyDialogPropertiesScrollPanel {
